<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="@color/SecondaryColor"
    tools:context=".UpdateNoteActivity">

    <TextView
        android:id="@+id/txtUpdateNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:text="@string/edit_tesk"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins" />

    <EditText
        android:id="@+id/UpdateEditTxtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtUpdateNote"
        android:layout_marginTop="16dp"
        android:hint="@string/title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:background="@drawable/blue_color_border"
        android:padding="12dp"
        android:fontFamily="@font/poppins" />

    <EditText
        android:id="@+id/UpdateEditTxtContent"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/UpdateEditTxtTitle"
        android:layout_marginTop="16dp"
        android:hint="@string/content"
        android:gravity="top"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:background="@drawable/blue_color_border"
        android:padding="12dp"
        android:fontFamily="@font/poppins" />

    <!-- Date Picker -->
    <Button
        android:id="@+id/UpdateSelectDateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:layout_below="@+id/UpdateEditTxtContent"
        android:backgroundTint="@color/blue"
        android:layout_marginTop="16dp"/>

    <!-- Priority Radio Buttons -->
    <RadioGroup
        android:id="@+id/updatePriorityRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/UpdateSelectDateBtn"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/blue"/>

        <RadioButton
            android:id="@+id/radioLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/radioMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/radioHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high"
            android:textColor="@color/black" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/updateSaveNoteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_task"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue"
        android:layout_below="@id/updatePriorityRadioGroup"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_marginEnd="16dp" />

</RelativeLayout>
